EMAT-055 | cleaning mid process